# rust-lang-spec

./: Cargo.toml
spec/lang/exprs/: array.abnf  array.md  array.xml  index.abnf  index.md  index.xml  repeat.abnf
spec/lang/types/: array.abnf  array.xml
tools/doc-generator/: Cargo.toml
tools/schema/: chapter.xsd
tools/spec-decomposition/: Cargo.toml
