[workspace]
members = ["tools/doc-generator", "tools/spec-decomposition"]
resolver = "2"

[workspace.dependencies]
spec-decomposition = {path="tools/spec-decomposition"}

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
authors = [ "Connor Horman <chorman64@gmail.com>"]
version = "0.1.0"